# nix

./: .gitignore  README.md  config.toml  flake.nix  get-vscode-extensions.sh  install  install.sh  switch
.github/workflows/: ci.yml
cli/: Cargo.toml  flake.nix  install.sh
cli/src/: install.rs  main.rs
home/: app.nix  copy-apps.nix  default.nix  direnv.nix  fish.nix  font.nix  git.nix  pkg.nix  starship.nix  vscode.nix
home/vscode/: default.nix  extension.nix  extensions.nix  settings.nix
hosts/: reimu.nix
hosts/marisa/: default.nix
installer/: Cargo.toml  flake.nix
lib/: log.sh  options.nix  systems.nix
lib/home/: default.nix  vim.nix
lib/home-manager/macos/: default.nix  shell.nix
lib/home/macos/: alias-apps.nix  default.nix  shell.nix  terminal.nix
lib/macos/: default.nix  home.nix  pam.nix
lib/modules/home/: default.nix  manage-apps.nix  (+2 more)
lib/overlay/: default.nix  macos-apps.nix  unstable.nix
machine/marisa/: macos.nix
machine/reimu/: hammerspoon.lua  home-manager.nix  macos.nix
machine/work/: config.toml
modules/: cachix.nix  default.nix  macos.nix  options.nix  scripts.nix  switch.nix  user.nix
modules/macos/: default.nix
modules/nixos/: default.nix  desktop.nix  docker.nix  nomad.nix  printer.nix  virtualization.nix
modules/scripts/: code-update.sh  dot.sh
os/macos/: default.nix  home-manager.nix  home.nix
profiles/work/: default.nix
src/home/: default.nix  direnv.nix  fish.nix  git.nix  ssh.nix  starship.nix  vscode.nix
src/macos/: default.nix  home-manager.nix
user/opeik/: config.toml  hammerspoon.lua  macos.nix
(+51 files in other folders)
