# Cargo crate manifest, see: <https://doc.rust-lang.org/cargo/reference/manifest.html>
[package]
name = "nix-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }

[profile.release]
strip = true # Strip debug symbols.
opt-level = "z" # Optimize for binary size.
lto = true # Enable link time optimisation.
